# PhysicsSimulator

./: .gitignore  CMakeLists.txt  README.md  check_dependencies.py  install_dependencies.sh  requirements.txt
examples/: basic_simulation.cpp
include/: PhysicsWorld.h  Quaternion.h  RigidBody.h  Vector3.h
python/: main.py  physics_binding.py
python/examples/: domino.py  pendulum.py
python/renderer/: gl_renderer.py
python/ui/: simulator_ui.py
src/core/: PhysicsWorld.cpp
src/dynamics/: RigidBody.cpp
src/utils/: Quaternion.cpp  Vector3.cpp
